<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data
        />

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <HorizontalScrollView
            android:id="@+id/icon_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/home_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"

                        android:text="Home" />


                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/songs_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_music_note_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Songs" />
                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/artist_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_contacts_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Artists" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#ffffff"

                        ></View>
                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/payment_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_payment_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Payment" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_linear_layout"
            android:orientation="vertical">

            <TextView
                style="@style/songs_text_style"
                android:text="@string/adele" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/beyonce" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/andrea_bocelli" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/frank_sinatra" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/whitney_houston" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/emeli_sande" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/charlie_puth" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/taylor_swift" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/katy_perry" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>
</layout>