<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <HorizontalScrollView
            android:id="@+id/icon_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/home_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"

                        android:text="Home" />


                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/songs_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_music_note_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Songs" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#ffffff"

                        ></View>
                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/artist_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_contacts_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Artists" />
                </LinearLayout>

                <LinearLayout style="@style/iconsLinearLayoutStyle">

                    <ImageView
                        android:id="@+id/payment_icon"
                        style="@style/iconsImageStyle"
                        android:src="@drawable/ic_payment_black_24dp" />

                    <TextView
                        style="@style/iconsTextStyle"
                        android:text="Payment" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_linear_layout"
            android:orientation="vertical">

            <TextView
                style="@style/songs_text_style"
                android:text="@string/hello_adele" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/single_ladies_beyonce" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/time_to_say_goodbye_andrea_bocelli" />

            <TextView
                style="@style/songs_text_style"
                android:text="@string/my_way_frank_sinatra" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/i_look_to_you_whitney_houston" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/read_all_about_it_emeli_sande" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/attention_charlie_puth" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/look_what_you_made_me_do_taylor_swift" />

            <TextView

                style="@style/songs_text_style"
                android:text="@string/chained_to_the_rhythm_katy_perry" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>
</layout>